# -Peer-to-Peer-Network-Overlay-with-Poco-C-Libraries

./: .gitignore  CMakeLists.txt  GITHUB_SETUP.md  README.md
include/: Common.h  DataExchange.h  DynamicNodeManager.h  MessageHandler.h  MessageRouter.h  NetworkManager.h  Node.h  NodeDiscovery.h  NodeRegistration.h  NodeSimulator.h  ReliableMessaging.h  TopologyManager.h
src/: DataExchange.cpp  DynamicNodeManager.cpp  MessageHandler.cpp  MessageRouter.cpp  NetworkManager.cpp  Node.cpp  NodeDiscovery.cpp  NodeRegistration.cpp  NodeSimulator.cpp  ReliableMessaging.cpp  TopologyManager.cpp  main.cpp
tests/: TestSuite.cpp  TestSuite.h
